# TinyProjects

./: README.md  requirements.txt
.github/workflows/: build-chatoversockets.yaml
ChatOverSockets/: LICENSE  README.md  chatOverSockets.py  requirements.txt
ChatOverSockets/.github/workflows/: build-nuitka.yaml
YetAnotherCalculator/: README.md  main.cpp
lazykit/: .lazykitignore  LICENSE  README.md  THEPLAN.txt  __init__.py  __main__.py  cli.py  pyproject.toml  tempscript.py  tracker.txt  utils.py
lazykit/__TestProjDir__/: .gitignore  __init__.py  main.py  pyproject.toml  readmeai-offline.md  utils.py
lazykit/commands/: gen_license.py  gen_readme.py  init.py  tree.py
lazykit/core/: config.py  context.py  extractors.py  generator.py
lazykit/docs/: gen_license.md  gen_readme.md  tree.md
lazykit/templates/license/: agpl3-header.txt  agpl3.txt  apache-header.txt  apache.txt  bsd2.txt  bsd3.txt  cc0-header.txt  cc_by-header.txt  cc_by_nc-header.txt  cc_by_nc_nd-header.txt  cc_by_nc_sa-header.txt  cc_by_nd-header.txt  cc_by_sa-header.txt  gpl2.txt  gpl3-header.txt  gpl3.txt  isc.txt  mit.txt  wtfpl-header.txt  wtfpl.txt  x11.txt  zlib.txt
lazykit/templates/readme/: readme.md.tpl
